<resources>
    <string name="app_name">SJSU Campus Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">San Jose State University</string>
    <string name="nav_header_subtitle">Interactive Campus Map</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search">Search</string>

    <string name="menu_home">SJSU Official Website</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_explore">Explore Services</string>
    <string name="menu_search">Search</string>
    <string name="menu_map">Campus Map</string>

    <string name="title_activity_maps">Map</string>
    <string name="content_main_text">Main Content Text</string>

    <string name="search_hint">Search here</string>
    <string name="info_image_title">Logo</string>
    <string name="details_image_desc">building image</string>
    <string name="details_description">Building description</string>
    <string name="details_title">Details Title</string>
    <string name="details_services">services</string>
    <string name="menu_details">Building Details</string>
    <string name="list_service_image">Services Icon</string>
    <string name="list_service_text">Services</string>
    <string name="directions_title">Get Directions</string>
    <string name="hint_origin_input">Please enter origin here</string>
    <string name="hint_dest_input">Please enter destination here</string>
    <string name="mode_walking">Walking</string>
    <string name="mode_driving">Driving</string>
    <string name="mode_transit">Transit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Go</string>
    <string name="menu_directions">Directions</string>
    <string name="directions_go_button">Go to this location</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required access my location.\nPlease allow permission if you want to use this service.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location Access is not allowed.</string>
    <string name="my_location">My Location</string>
</resources>
