<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sjsumap.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sjsumap.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.sjsumap.ui.map.MapFragment"
        android:label="@string/menu_map"
        >
        <argument
            android:name="param1"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.example.sjsumap.ui.explore.ExploreFragment"
        android:label="@string/menu_explore"
        tools:layout="@layout/fragment_explore" />

    <action
        android:id="@+id/action_search_location"
        app:destination="@id/nav_map">
        <argument
            android:name="param1"
            app:argType="string"/>
    </action>


</navigation>