<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ui.navigation.DirectionsFragment">


    <AutoCompleteTextView
        android:id="@+id/origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="address"
        android:drawableStart="@drawable/ic_place_blue"
        android:drawableLeft="@drawable/ic_place_blue"
        android:hint="@string/hint_origin_input"
        android:inputType="textCapWords"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_my_location"
        android:contentDescription="@string/my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_my_location_blue"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@+id/origin"
        app:layout_constraintEnd_toEndOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="address"
        android:drawableStart="@drawable/ic_place_red"
        android:drawableLeft="@drawable/ic_place_red"
        android:hint="@string/hint_dest_input"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origin" />

    <RadioGroup
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination">

        <RadioButton
            android:id="@+id/walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mode_walking" />

        <RadioButton
            android:id="@+id/driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_driving" />

        <RadioButton
            android:id="@+id/transit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_transit" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode">

        <!--        <Button-->
        <!--            android:id="@+id/btnCancel"-->
        <!--            style="?android:attr/borderlessButtonStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/button_cancel"-->
        <!--            android:textSize="15sp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:textColor="@color/colorPrimary"/>-->

        <Button
            android:id="@+id/btnOk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_navigation"
            android:drawableEnd="@drawable/ic_navigation"
            android:text="@string/button_ok"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>